Use valueOf()
- Use for-each
- Use diamonds